# jieba_ex

./: mix.exs
native/jieba/: Cargo.toml
native/jieba/src/: lib.rs
