[package]
name = "jieba"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "jieba"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0"
jieba-rs = { git = "https://github.com/ACzero/jieba-rs.git", branch = "test", features = ["tfidf", "textrank"] }
lazy_static = "1.4.0"